refactor: 修改 MyBatis Plus 主键策略为雪花算法
- 将全局主键策略从 AUTO 改为 ASSIGN_ID
- 解决 BIGINT 主键字段无默认值的问题
- 使用分布式 ID 生成算法

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,8 +33,8 @@ mybatis-plus:
     map-underscore-to-camel-case: true
   global-config:
     db-config:
-      # 主键策略
-      id-type: auto
+      # 主键策略 - 使用雪花算法
+      id-type: assign_id
       # 逻辑删除字段
       logic-delete-field: deleted
       logic-delete-value: 1
